--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PortfolioRails</title>
+    <title>StackOverflow</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <% if current_user %>
+      <%= current_user.email %> | <%= link_to "Sign out", '/signout', id: "signout" %>
+    <% else %>
+      <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin', id: "signin" %>
+    <% end %>
+
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
+    <div class='container'>
+      <%= yield %>
+    </div>
   </body>
 </html>
