fix route from edit to go back to projects if no changes were made

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -13,4 +13,4 @@
     </div>
   </div>
 <% end %>
-<p><%= link_to "Return to Projects", project_path(@project.id)%></p>
+<p><%= link_to "Return to Projects", projects_path %></p>
