--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
        comment by: <%= comment.user.user_name %>
       <hr>
       <p> <% if is_admin? %>
-      <p class="admin"><%= link_to "Edit Comment", edit_project_comment_path(comment)%></p>
+      <p class="admin"><%= link_to "Edit Comment", edit_project_comment_path(@project, comment)%></p>
       <p class= "admin"><%= link_to "Delete Comment", project_comment_path(@project, comment),
                                :data => {:confirm => "You sure?",
                                          :method => "delete"} %>
