add form control to sign up

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,16 @@
 <h1> Sign up</h1>
-<%= form_for @user do |f| %>
-  <%= f.label "Email" %>
-  <%= f.text_field :email %>
-  <%= f.label "Password" %>
-  <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  <%= f.label :user_name %>
-  <%= f.text_field :user_name %>
-  <%= f.submit "Sign Up", id: "sign_up_button" %>
-<% end %>
+<div class = "card">
+  <div class = "card-body">
+  <%= form_for @user do |f| %>
+    <%= f.label "Email" %>
+    <%= f.text_field :email, :class => "form-control" %>
+    <%= f.label "Password" %>
+    <%= f.password_field :password, :class => "form-control" %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, :class => "form-control" %>
+    <%= f.label :user_name %>
+    <%= f.text_field :user_name, :class => "form-control" %>
+    <%= f.submit "Sign Up", id: "sign_up_button" %>
+  <% end %>
+  </div>
+</div>
