add new project path created for admin

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,8 +12,8 @@
       <% end %></p>
     </div>
   </div>
-
 <% end %>
+  <h3><%= link_to "Add new project", new_project_path %></h3>
 <% else %>
 <div class= 'card'>
   <div class = 'card-body'>
