--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,9 +7,10 @@
       <%= f.text_field :title, :class => "form-control" %>
       <%= f.label :project_link, :class => "form_title" %>
       <%= f.text_field :project_link, :class => "form-control" %>
-    <span class="input-group-btn">
-      <%= f.submit :class => "btn btn-primary"%>
-    </span>
+      <%= f.hidden_field(:user_id, :value => current_user.id) %>
+      <span class="input-group-btn">
+        <%= f.submit :class => "btn btn-primary"%>
+      </span>
     </div>
   </div>
 <% end %>
