--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,10 @@
-<h3>Noah's Projects:</h3>
+<h3>A Couple Of My Projects:</h3>
 <% if @projects.any? %>
 <% @projects.each do |project| %>
   <div class='card'>
     <div class='card-body'>
-      <h3>project:</h3>
-      <p><%= link_to project.title, project_path(project) %></p>
+      <h3>Project: <%= project.title %></h3>
+      <p><%= link_to image_tag(project.photo.url(:medium)), project_path(project) %></p>
       <p><% if is_admin? %>
       <%= link_to "Edit", edit_project_path(project) %> |
       <%= link_to "Delete", project_path(project),
