--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,9 @@
     <%= f.password_field :password_confirmation, :class => "form-control" %>
     <%= f.label :user_name %>
     <%= f.text_field :user_name, :class => "form-control" %>
-    <%= f.submit "Sign Up", id: "sign_up_button" %>
+    <%= f.file_field :avatar, :class => "form-control" %>
+    <br>
+    <%= f.submit "Sign Up", :class => "btn btn-success form-control", id: "sign_up_button" %>
   <% end %>
   </div>
 </div>
