--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,8 @@
 <%= render "layouts/errors", :object => @comment %>
 
 <%= form_for [@project, @comment] do |f| %>
-  <%= f.label :body %><br>
-  <%= f.text_area :body %><br>
+  <%= f.label "Comment" %><br>
+  <%= f.text_area :body, :class => "form-control" %><br>
   <%= f.hidden_field(:user_id, :value => current_user.id) %>
   <%= f.submit %>
 <% end %>
