add user avatar images and used border radius

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,8 +13,8 @@
     <hr>
        <% @project.comments.each do |comment| %>
        <p><%= comment.body %> <p>
-       comment by: <%= comment.user.user_name %>
-                   <%= image_tag comment.user.avatar.url(:small) %>
+       Comment by: <%= comment.user.user_name %>
+                   <%= image_tag comment.user.avatar.url(:small), class:"user_image" %>
       <hr>
       <p> <% if is_admin? %>
       <p class="admin"><%= link_to "Edit Comment", edit_project_comment_path(@project, comment)%></p>
