add ajax for sign in and sign up

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
-<span id="sign_in_link"><span>
-<span id="sign_up_link"><span>
-  
+<div class="card" id="display_column">
+  <span id="sign_in_link"><span>
+  <span id="sign_up_link"><span>
+</div>
 <h3>A Couple Of My Projects:</h3>
 <% if @projects.any? %>
 <% @projects.each do |project| %>
