add slide toggle for displying sign up and sign fixed id naming

--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,1 +1,3 @@
-$('#sign_up_link').hide().after('<%= j render("form") %>');
+$('#sign_up_link').after('<%= j render("form") %>').slideToggle(800);
+$('#sign_up').hide();
+$('#pipe').hide();
