--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,10 @@
   <body>
     <div class='container'>
       <% if current_user %>
-        <%= current_user.email %> | <%= link_to "Sign out", '/signout', id: "signout" %>
+        <%= current_user.email %> <span id="pipe">|</span> <%= link_to "Sign out", '/signout', id: "signout" %>
       <% else %>
-        <%= link_to "Sign up", 'signup', id:'sign_up_link', remote: true %> | <%= link_to "Sign in", '/signin', id:'sign_in_link', remote: true %>
+        <%= link_to "Sign up", '/signup', id:'sign_up', remote: true %> <span id="pipe">|</span> <%= link_to "Sign in", '/signin', id:'sign_in', remote: true %>
       <% end %>
-
       <%= flash[:alert] %>
       <%= flash[:notice] %>
       <br>
