fixed layout for cards in comment section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,11 @@
 .displayComment{
   margin: 40px;
 }
+#returnProj {
+  text-align: center;
+  font-size: 25px;
+}
+.commentBody{
+  padding: 50px;
+  margin-bottom: -20px;
+}
