--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
 <% else %>
 <div class= 'card'>
   <div class = 'card-body'>
-    <p> There are currently no projects listed. Please visit <span><a href="https://www.github.com/ngottlieb87">my github</a></span>!</p>
+    <p> There are currently no projects listed. Please visit <span><a href="https://www.github.com/ngottlieb87">My Github</a></span>!</p>
   </div>
 <% end %>
 </div>
