--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,10 @@
 
-
+<div class ="card commentBody">
   <h1 class="projectName"><%= @project.title %></h1>
   <div class="card">
     <div class= "card-body">
     <%= image_tag @project.photo.url(:medium) %>
-     <a href= <%= @project.project_link %> <p>Project Repository</p> </a>
+     <a href= <%= @project.project_link %> <p> Project Repository</p> </a>
     </div>
   </div>
   <div class="displayComment">
@@ -15,19 +15,19 @@
        <p><%= comment.body %> <p>
        Comment by: <%= comment.user.user_name %>
                    <%= image_tag comment.user.avatar.url(:small), class:"user_image" %>
-      <hr>
+
       <p> <% if is_admin? %>
-      <p class="admin"><%= link_to "Edit Comment", edit_project_comment_path(@project, comment)%></p>
       <p class= "admin"><%= link_to "Delete Comment", project_comment_path(@project, comment),
                                :data => {:confirm => "You sure?",
                                          :method => "delete"} %>
           <%end %>
       </p>
+    <hr>
     <% end %>
     <% else %>
       <p>There are no comments for this project. <%= link_to "Add One!", new_project_comment_path(@project)%><p>
     <% end %>
   </div>
-  <hr>
   <p id= "returnProj"><%= link_to "Return to Projects", projects_path %></p>
   <hr>
+</div>
