--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <h1> Sign up</h1>
-<div class = "card">
+<div class = "card sign_in_card">
   <div class = "card-body">
   <%= form_for @user do |f| %>
     <%= f.label "Email" %>
@@ -12,7 +12,8 @@
     <%= f.text_field :user_name, :class => "form-control" %>
     <%= f.file_field :avatar, :class => "form-control" %>
     <br>
-    <%= f.submit "Sign Up", :class => "btn btn-success form-control", id: "sign_up_button" %>
+    <%= f.submit "Sign Up", :class => "btn btn-success", id: "sign_up_button" %>
   <% end %>
+  <%= link_to "Back", projects_path, class: "back" %>
   </div>
 </div>
