add favicon and aligned text for adding product

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,7 +11,7 @@
       <%= f.file_field :photo, :class => "form-control" %>
       <%= f.hidden_field(:user_id, :value => current_user.id) %>
       <span class="input-group-btn">
-        <%= f.submit :class => "btn btn-primary form-control" %>
+        <%= f.submit :class => "btn btn-primary form-control add-button" %>
       </span>
     </div>
   </div>
