--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
   </div>
 <% end %>
 <% if is_admin? %>
-  <h3><%= link_to "Add new project", new_project_path %></h3>
+  <h3 id="add_product_link"><%= link_to "Add new project", new_project_path %></h3>
 <% end %>
 <% else %>
 <div class= 'card'>
