--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@
 
 }
 
+#add_product_link{
+  text-align: center;
+}
+
 #signin_title{
   text-align: center;
 }
@@ -29,7 +33,10 @@
   text-align: center;
   font-size: 25px;
 }
-
+.add-button{
+  border-radius: 5px;
+  margin-top: 10px;
+}
 .addComment{
   text-align: center;
 }
